--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,19 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+out/production
 
 ### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+*.mvn
+mvnw.cmd
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
-*.iws
-*.iml
-*.ipr
 
 ### Eclipse ###
 .apt_generated
